# OC_Project10_SoftDesk

./: README.md  pyproject.toml
.github/: dependabot.yml
core/: admin.py  models.py  permissions.py  serializers.py  views.py
core/migrations/: 0001_initial.py  0002_initial.py  0003_alter_comment_options_alter_contributor_options_and_more.py  0004_alter_issue_status.py
flake8_report/: index.html
softdesk/: settings.py  urls.py
users/: admin.py  models.py  permissions.py  serializers.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_managers.py
