[project]
name = "oc-project10-softdesk"
version = "0.1.0"
description = ""
authors = [
    {name = "LsFbr",email = "louisfabre@hotmail.fr"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.6,<6.0.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "drf-nested-routers (>=0.95.0,<0.96.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
